<resources>
    <string name="name_app">Commute Scheduler</string>

    <string name="app_description">
        Application realised as the Mobile Applications and Operatings Systems HES-SO MSE module final project\n\nAuthors:\n   Brigljevic T.\n   Cubuk F.\n   Gonzalez Puertas A.\n\nJanuary 2020
    </string>

    <string name="name_main">Commute scheduler</string>
    <string name="name_map">Map view</string>
    <string name="name_commutes">Saved commutes</string>
    <string name="name_favorites">Favorites</string>
    <string name="name_new">Create new commute</string>
    <string name="name_edit">Edit commute</string>
    <string name="name_favorite_new">Create new favorite</string>
    <string name="name_favorite_edit">Edit favorite</string>
    <string name="name_quick">Quick route</string>
    <string name="name_settings">About</string>
    <string name="start_guide">Starting guide</string>

    <string name="title_edit">Edit</string>
    <string name="title_map_view">Map view</string>
    <string name="title_commutes_list">Commutes list</string>
    <string name="title_quick_commute_view">Quickly add a commute</string>

    <string name="action_settings">Settings</string>
    <string name="action_validate">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">NEXT</string>
    <string name="action_previous">PREVIOUS</string>
    <string name="action_skip">SKIP</string>
    <string name="action_got">START NOW</string>

    <string name="Monday">MO</string>
    <string name="Tuesday">TU</string>
    <string name="Wednesday">WE</string>
    <string name="Thursday">TH</string>
    <string name="Friday">FR</string>
    <string name="Saturday">SA</string>
    <string name="Sunday">SU</string>

    <string name="text_commute_name">Commute:</string>
    <string name="text_commute_start">Starting point:</string>
    <string name="text_commute_end">Destination:</string>
    <string name="text_commute_departure">Leave:</string>
    <string name="text_commute_arrival">Arrive:</string>
    <string name="text_commute_duration">Duration:</string>
    <string name="no_commute">No commute selected</string>
    <string name="choose_favorites">Choose from favorites</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="in">in</string>
    <string name="leave">leave</string>
    <string name="arrive">arrive</string>
    <string name="length">Length of\nthe commute:</string>
    <string name="text_reminder">Reminder</string>
    <string name="text_alarm">Alarm</string>
    <string name="text_favorite_name">The name of the favorite</string>
    <string name="text_favorite_address">The address of the favorite</string>

    <string name="field_commute_name">COMMUTE NAME</string>
    <string name="field_departure">Set the start point</string>
    <string name="field_departure_address">START_ADDRESS</string>
    <string name="field_departure_time">LEAVE AT</string>
    <string name="field_arrival">Set the arrival point</string>
    <string name="field_arrival_address">ARRIVAL_ADDRESS</string>
    <string name="field_arrival_time">ARRIVE AT</string>
    <string name="field_distance">LENGTH</string>
    <string name="field_time">HH:MM</string>
    <string name="field_length">XYZ km</string>
    <string name="field_choose_date">Choose the date</string>
    <string name="field_choose_time">Choose the time</string>
    <string name="field_reminder">REMINDER</string>
    <string name="field_alarm">ALARM</string>
    <string name="field_alarm_time">XX min</string>
    <string name="field_favorite_name">FAVORITE NAME</string>
    <string name="field_favorite_address">Set the address</string>

    <string name="time_filler">... : ...</string>

    <string name="description_map">Extend view of the map</string>
    <string name="description_commutes_list">Complete view of the saved commutes</string>
    <string name="description_enhance_map_button">Switch to the extended view of the map</string>
    <string name="description_enhance_commutes_button">Switch to the view of the commutes</string>
    <string name="description_delete_button">Delete existing element</string>
    <string name="description_edit_button">Edit existing element</string>

    <string name="button_return">Return to previous view</string>
    <string name="button_add">Create new commute</string>
    <string name="button_validate">Validate creation/edition</string>
    <string name="button_cancel">Cancel creation/edition</string>
    <string name="button_go">GO</string>
    <string name="button_favorites">Show favorites</string>
    <string name="button_quick">Open quick commute creation</string>
    <string name="button_overlay">Show overlay information</string>
    <string name="button_settings">Change settings</string>
    <string name="button_favorite_edit">Edit existing favorite</string>
    <string name="button_favorite_delete">Delete existing favorite</string>
    <string name="button_add_first_commute">Add your first commute</string>
    <string name="button_add_first_favorite">Add your first favorite</string>

    <string name="start01">Welcome to our Commute Scheduler application !\n\nSwipe across these few instructions for a first overview of its features.\n\nIf you wish to skip it, you can access it again from the "About" page of the application (see below).\n\n Enjoy !\n\n T.B., F.C., A.G.P.</string>
    <string name="start02">Here is the main view of our application, showing a list of commutes and the route for the selected on on the map</string>
    <string name="start03">First, start by creating your first commute</string>
    <string name="start04">Enter the needed data as shown below and validate your inputs</string>
    <string name="start05">You can now see the commute added to the list, and its route shown on the map</string>
    <string name="start06">The map can be expanded, showing you the information related to the route, which can be toggled</string>
    <string name="start07">You can also create favorites with our app, on the Favorites view</string>
    <string name="start08">You can then use the favorites when creating a commute</string>
    <string name="start09">By swiping on a commute or tapping on a favorite, you can choose to edit or delete it</string>
    <string name="start10">Finally, you can use the Quick Route tool to create commutes from existing favorites. Try it after creating your list of favorites !\n\nPlay around and have fun,\nwe hope you will enjoy using our app !</string>

    <string name="sw_notifications">Reassessment route before departure?</string>

    <string name="checkbox_view_traffic">View traffic</string>

    <string name="coming_soon">COMING SOON !</string>

    <string name="GoogleMapsKey"
        templateMergeStrategy="preserve"
        translatable="false">AIzaSyCvHGKUjPP7Bd07ReF_jF2392Uie8y1qlg</string>
</resources>
