<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/element_extended"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/element_extended_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/element_extended_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/field_commute_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/element_extended_MO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/Monday" />

        <TextView
            android:id="@+id/element_extended_TU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Tuesday" />

        <TextView
            android:id="@+id/element_extended_WE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Wednesday" />

        <TextView
            android:id="@+id/element_extended_TH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Thursday" />

        <TextView
            android:id="@+id/element_extended_FR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Friday" />

        <TextView
            android:id="@+id/element_extended_SA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Saturday" />

        <TextView
            android:id="@+id/element_extended_SU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Sunday" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/element_extended_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/element_extended_start_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/element_extended_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/field_departure"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/element_extended_start_end"
                app:layout_constraintTop_toTopOf="@+id/element_extended_start_end"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/element_extended_start_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/field_departure_address"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/element_extended_start_end"
                app:layout_constraintStart_toEndOf="@+id/element_extended_start"
                app:layout_constraintTop_toTopOf="@+id/element_extended_start_end"
                app:layout_constraintWidth_percent="0.7" />

            <TextView
                android:id="@+id/element_extended_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/field_arrival"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/element_extended_start"
                app:layout_constraintTop_toBottomOf="@+id/element_extended_start"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/element_extended_end_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/field_arrival_address"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/element_extended_start_address"
                app:layout_constraintStart_toEndOf="@+id/element_extended_start"
                app:layout_constraintTop_toBottomOf="@+id/element_extended_start"
                app:layout_constraintWidth_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/element_divider_top"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/element_extended_time1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leave_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/text_commute_departure" />

            <TextView
                android:id="@+id/element_extended_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/arrive_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/text_commute_arrival" />

            <TextView
                android:id="@+id/element_extended_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/travel_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/text_commute_duration" />

            <TextView
                android:id="@+id/element_extended_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/field_time"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/element_divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/element_extended_notif"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/sw_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/text_reminder"
                app:layout_constraintStart_toStartOf="@+id/element_extended_notif"
                app:layout_constraintTop_toTopOf="@+id/element_extended_notif"
                app:layout_constraintWidth_percent="0.35" />

            <TextView
                android:id="@+id/reminder_tune"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/field_reminder"
                app:layout_constraintEnd_toEndOf="@+id/sw_reminder"
                app:layout_constraintStart_toStartOf="@+id/sw_reminder"
                app:layout_constraintTop_toBottomOf="@+id/sw_reminder" />

            <Switch
                android:id="@+id/sw_alarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/text_alarm"
                app:layout_constraintEnd_toEndOf="@+id/element_extended_notif"
                app:layout_constraintTop_toTopOf="@+id/element_extended_notif"
                app:layout_constraintWidth_percent="0.55" />

            <TextView
                android:id="@+id/alarm_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/field_alarm_time"
                app:layout_constraintStart_toStartOf="@+id/sw_alarm"
                app:layout_constraintTop_toBottomOf="@+id/sw_alarm"
                app:layout_constraintWidth_percent="0.15" />

            <TextView
                android:id="@+id/alarm_tune"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/field_alarm"
                app:layout_constraintEnd_toEndOf="@+id/sw_alarm"
                app:layout_constraintTop_toBottomOf="@+id/sw_alarm"
                app:layout_constraintWidth_percent="0.35" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>